src/test/ui/issue-35869.stderr
error[E0053]: method `foo` has an incompatible type for trait
  --> $DIR/issue-35869.rs:23:15
   |
14 |     fn foo(_: fn(u8) -> ()); //~ NOTE type in trait
   |               ------------ type in trait
...
23 |     fn foo(_: fn(u16) -> ()) {}
   |               ^^^^^^^^^^^^^ expected u8, found u16
   |
   = note: expected type `fn(fn(u8))`
              found type `fn(fn(u16))`

error[E0053]: method `bar` has an incompatible type for trait
  --> $DIR/issue-35869.rs:27:15
   |
15 |     fn bar(_: Option<u8>); //~ NOTE type in trait
   |               ---------- type in trait
...
27 |     fn bar(_: Option<u16>) {}
   |               ^^^^^^^^^^^ expected u8, found u16
   |
   = note: expected type `fn(std::option::Option<u8>)`
              found type `fn(std::option::Option<u16>)`

error[E0053]: method `baz` has an incompatible type for trait
  --> $DIR/issue-35869.rs:31:15
   |
16 |     fn baz(_: (u8, u16)); //~ NOTE type in trait
   |               --------- type in trait
...
31 |     fn baz(_: (u16, u16)) {}
   |               ^^^^^^^^^^ expected u8, found u16
   |
   = note: expected type `fn((u8, u16))`
              found type `fn((u16, u16))`

error[E0053]: method `qux` has an incompatible type for trait
  --> $DIR/issue-35869.rs:35:17
   |
17 |     fn qux() -> u8; //~ NOTE type in trait
   |                 -- type in trait
...
35 |     fn qux() -> u16 { 5u16 }
   |                 ^^^ expected u8, found u16
   |
   = note: expected type `fn() -> u8`
              found type `fn() -> u16`

error: aborting due to 4 previous errors

